v0.3 fix: the news grid collapsed

--- a/app/src/components/News/news.module.sass
+++ b/app/src/components/News/news.module.sass
@@ -10,10 +10,18 @@ $middle-news_backround: #5459ff85
 	border-radius: 8px
 	background: #002bff70
 
+.news__grid
+	padding: 20px
+
+.newsContainer
+	display: flex
+	flex-wrap: wrap
+
 .wrapperArticle
 	margin: 0
 	padding: 0
-	width: 100%
+	width: 48%
+	margin-right: 1%
 	height: 300px
 	margin-bottom: 20px
 	display: grid
